--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:context="kulkarni.aditya.architecture.activity.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/todo_recycler_view"
+        android:id="@+id/word_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
