--- a/app/src/main/res/layout/content_new_word.xml
+++ b/app/src/main/res/layout/content_new_word.xml
@@ -98,4 +98,10 @@
         android:background="@color/colorPrimary"
         android:text="Save" />
 
+    <!--<com.google.android.material.button.MaterialButton-->
+        <!--android:id="@+id/material_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="dsvsd"/>-->
+
 </LinearLayout>
